--- a/views/newEvent.handlebars
+++ b/views/newEvent.handlebars
@@ -37,8 +37,8 @@
    <div class="containerEvent">
         <form id="createEvent" method="get" action="/addEvent">
         	<!--image-->
-        	<label for="image" hidden><b>Image</b></label>
-        		<input type="file" class="form-control" placeholder="image upload" name="image">
+        	{{!-- <label for="image" hidden><b>Image</b></label>
+        		<input type="file" class="form-control" placeholder="image upload" name="image"> --}}
 
         	<!--event name-->
         	<label for="eventName">Event Name*</label>
